# WinProcessSecurityInspector

./: .gitignore  CMakeLists.txt  README.md
config/: diagnosis-rules.json  diagnosis-rules.schema.json
docs/: user-guide.md
docs/design/: detailed-design.md  overview-design.md
docs/requirements/: README.md  software-requirements-specification.md
docs/review/: detailed-design-review.md  requirements-and-design-review.md
docs/superpowers/plans/: 2026-07-22-phase2-phase3.md
include/wpsi/common/: result.h  string_utils.h  win_handle.h
include/wpsi/core/: context.h
include/wpsi/diagnosis/: rule_engine.h
include/wpsi/inspectors/: browser_inspector.h  compatibility_inspector.h  desktop_inspector.h  manifest_inspector.h  process_inspector.h  service_inspector.h  session_inspector.h  signature_inspector.h  startup_inspector.h  token_inspector.h  window_inspector.h
include/wpsi/report/: html_exporter.h  json_exporter.h  markdown_exporter.h
src/cli/: main.cpp
tests/cmake/: verify_msvc_runtime.cmake
tests/integration/: test_current_process_inspection.cpp
tests/unit/: test_phase1_core.cpp
